frontend: Fix sticky hover state on mobile
Fix sticky hover state on mobile. On mobile after clicking Run once the button
background color stayed as the hover color. I <3 CSS.

Link: https://css-tricks.com/solving-sticky-hover-states-with-media-hover-hover/

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -520,8 +520,10 @@ button.primary {
   transition: background 0.3s ease-in-out;
   text-decoration: none;
 }
-button:hover:enabled.primary {
-  background: var(--btn-bg-hover);
+@media (hover: hover) {
+  button:hover:enabled.primary {
+    background: var(--btn-bg-hover);
+  }
 }
 
 .run button#run,
